--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,3 @@
-// TODO: add correct configuration and icons
-
 {
 	"name": "Jira estimate summarizer",
 	"version": "1.0",
@@ -9,26 +7,16 @@
 		"scripts": ["background.js"],
 		"persistent": false
 	},
-	"page_action" :
-	{
-		"default_icon" : "icon-19.png"
-	},
 	"content_scripts": [
 		{
-			"matches": ["xxx"],
+			"matches": ["https://*.atlassian.net/browse/*"],
 			"css": ["styles.css"],
 			"js": ["script.js"]
 		}
 	],
 	"permissions" : [
-		"declarativeContent",
 		"tabs",
-		"xxx"
+		"https://*.atlassian.net/browse/*"
 	],
-	"icons" : {
-		"19" : "icon-19.png",
-		"48" : "icon-48.png",
-		"128" : "icon-128.png"
-	},
 	"manifest_version": 2
 }
