--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,10 @@
 		"tabs",
 		"https://*.atlassian.net/browse/*"
 	],
+	"icons" : {
+		"16" : "icon-16x16.png",
+		"32" : "icon-32x32.png",
+		"192" : "icon-192x192.png"
+	},
 	"manifest_version": 2
 }
