--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,10 @@
 		"scripts": ["background.js"],
 		"persistent": false
 	},
+	"page_action" :
+	{
+		"default_icon" : "icon-32x32.png"
+	},
 	"content_scripts": [
 		{
 			"matches": ["https://*.atlassian.net/browse/*"],
