--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,8 @@
 	"icons" : {
 		"16" : "icon-16x16.png",
 		"32" : "icon-32x32.png",
-		"192" : "icon-192x192.png"
+		"48" : "icon-48x48.png",
+		"128" : "icon-128x128.png"
 	},
 	"manifest_version": 2
 }
